...
                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ebX-JF-w3W" userLabel="Like Button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="RedLike"/>
                                                    <connections>
                                                        <action selector="likeButtonClicked:" destination="pLX-jw-mpR" eventType="touchUpInside" id="OqU-PS-JEw"/>
                                                    </connections>
                                                </button>
...
                                <viewLayoutGuide key="contentLayoutGuide" id="5uZ-Mm-hCn"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="pWd-RG-iO3"/>
                                <connections>
                                    <outlet property="delegate" destination="k5a-ws-gge" id="kAk-hE-Tp0"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RVS-Js-94B" userLabel="BackwardButton">
                                <rect key="frame" x="9" y="56" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackwardButton"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="BackwardButton"/>
                                <connections>
                                    <action selector="didTapBackButton" destination="k5a-ws-gge" eventType="touchUpInside" id="HgX-rX-4OD"/>
...
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UnsplashLogo" translatesAutoresizingMaskIntoConstraints="NO" id="uuz-gf-yO6" userLabel="Unsplash Logo Image View">
                                <rect key="frame" x="166.66666666666666" y="408.66666666666669" width="60" height="60"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hhq-Xa-kCM" userLabel="Login button">
                                <rect key="frame" x="16" y="646" width="361" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="PcM-DH-Rln"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Войти">
                                    <color key="baseForegroundColor" name="ypBlack"/>
...
