...
	
	private var estimatedProgressObservation: NSKeyValueObservation?
	
	override func viewWillAppear(_ animated: Bool) {
		super.viewWillAppear(animated)
		
		webView.accessibilityIdentifier = "UnsplashWebView"
		estimatedProgressObservation = webView.observe(
			\.estimatedProgress,
			options: [],
			changeHandler: { [weak self] _, _ in
				guard let self = self else { return }
				presenter?.didUpdateProgressValue(webView.estimatedProgress)
...
